[tool.poetry]
name = "compute-watertown"
version = "0.1.0"
description = "Tools to scrape the Town of Watertown's website and free its data"
authors = ["Christopher Garay <christopher.d.garay@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
